fix: spacing on desktop

--- a/src/containers/Articles/styles.scss
+++ b/src/containers/Articles/styles.scss
@@ -25,7 +25,8 @@
     @include breakpoint-up(large){
 
         &__header{
-            text-align: initial
+            text-align: initial;
+            margin-bottom: var(--space-xl);
         }
 
         &__list{
